# instagram-cli

./: README.md  main.py  pyproject.toml
src/instagram_cli/: api.py  cli.py  fftools.py  tunnel.py
src/instagram_cli/api/: __init__.py  auth.py  client.py  media.py  upload.py
