[project]
name = "instagram-cli"
version = "0.1.0"
description = "Instagram Graph API CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "python-dotenv",
]

[project.scripts]
instagram-cli = "instagram_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instagram_cli"]
