[project]
name = "instagram-cli"
version = "0.2.0"
description = "Instagram Graph API CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "python-dotenv",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyngrok>=7.0",
]

[project.scripts]
instagram-cli = "instagram_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instagram_cli"]
